call feature added

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </svg>
               </div>
 
-              <h2 class="font-bold">National Emergency Number</h2>
+              <h2 class="service font-bold">National Emergency Number</h2>
               <p class="text-sm text-gray-500">National Emergency</p>
               <p class="copyNumber text-2xl font-bold mt-2">999</p>
 
@@ -139,7 +139,7 @@
                   📋 Copy
                 </button>
                 <button
-                  class="px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
+                  class="call px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
                 >
                   <img src="./assets/call.png" class="w-[14px]" alt="" />
                   Call
@@ -177,7 +177,7 @@
                 </svg>
               </div>
 
-              <h2 class="font-bold">Police Helpline Number</h2>
+              <h2 class="service font-bold">Police Helpline Number</h2>
               <p class="text-sm text-gray-500">Police</p>
               <p class=" copyNumber text-2xl font-bold mt-2">999</p>
 
@@ -194,7 +194,7 @@
                   📋 Copy
                 </button>
                 <button
-                  class="px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
+                  class="call px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
                 >
                   <img src=".//assets/call.png" class="w-[14px]" alt="" />
                   Call
@@ -232,7 +232,7 @@
                 </svg>
               </div>
 
-              <h2 class="font-bold">Fire Service Number</h2>
+              <h2 class="service font-bold">Fire Service Number</h2>
               <p class="text-sm text-gray-500">Fire Service</p>
               <p class="copyNumber text-2xl font-bold mt-2">999</p>
 
@@ -249,7 +249,7 @@
                   📋 Copy
                 </button>
                 <button
-                  class="px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
+                  class="call px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
                 >
                   <img src=".//assets/call.png" class="w-[14px]" alt="" />
                   Call
@@ -286,7 +286,7 @@
                 </svg>
               </div>
 
-              <h2 class="font-bold">Ambulance Service</h2>
+              <h2 class="service font-bold">Ambulance Service</h2>
               <p class="text-sm text-gray-500">Ambulance</p>
               <p class="copyNumber text-2xl font-bold mt-2">1994-999999</p>
 
@@ -303,7 +303,7 @@
                   📋 Copy
                 </button>
                 <button
-                  class="px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
+                  class="call px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
                 >
                   <img src=".//assets/call.png" class="w-[14px]" alt="" />
                   Call
@@ -394,7 +394,7 @@
                 </svg>
               </div>
 
-              <h2 class="font-bold">Anti-Corruption Helpline</h2>
+              <h2 class="service font-bold">Anti-Corruption Helpline</h2>
               <p class="text-sm text-gray-500">Anti-Corruption</p>
               <p class=" copyNumber text-2xl font-bold mt-2">106</p>
 
@@ -411,7 +411,7 @@
                   📋 Copy
                 </button>
                 <button
-                  class="px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
+                  class="call px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
                 >
                   <img src=".//assets/call.png" class="w-[14px]" alt="" />
                   Call
@@ -449,7 +449,7 @@
                 </svg>
               </div>
 
-              <h2 class="font-bold">Electricity Helpline</h2>
+              <h2 class="service font-bold">Electricity Helpline</h2>
               <p class="text-sm text-gray-500">Electricity</p>
               <p class="copyNumber text-2xl font-bold mt-2">16216</p>
 
@@ -466,7 +466,7 @@
                   📋 Copy
                 </button>
                 <button
-                  class="px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
+                  class="call px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
                 >
                   <img src=".//assets/call.png" class="w-[14px]" alt="" />
                   Call
@@ -504,7 +504,7 @@
                 </svg>
               </div>
 
-              <h2 class="font-bold">Brac Helpline</h2>
+              <h2 class="service font-bold">Brac Helpline</h2>
               <p class="text-sm text-gray-500">Brac</p>
               <p class="copyNumber text-2xl font-bold mt-2">16445</p>
 
@@ -521,7 +521,7 @@
                   📋 Copy
                 </button>
                 <button
-                  class="px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
+                  class="call px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
                 >
                   <img src=".//assets/call.png" class="w-[14px]" alt="" />
                   Call
@@ -559,7 +559,7 @@
                 </svg>
               </div>
 
-              <h2 class="font-bold">Bangladesh Railway Helpline</h2>
+              <h2 class="service font-bold">Bangladesh Railway Helpline</h2>
               <p class="text-sm text-gray-500">Travel</p>
               <p class="copyNumber text-2xl font-bold mt-2">163</p>
 
@@ -576,7 +576,7 @@
                   📋 Copy
                 </button>
                 <button
-                  class="px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
+                  class="call px-3 py-1 text-sm rounded-lg bg-green-600 text-white w-full flex items-center justify-center gap-2"
                 >
                   <img src=".//assets/call.png" class="w-[14px]" alt="" />
                   Call
@@ -596,7 +596,7 @@
                 Clear
               </button>
             </div>
-            <ul class="mt-4 space-y-2 text-[12px] overflow-y-auto max-h-80">
+            <ul id="serviceHistory" class="mt-4 space-y-2 text-[12px] overflow-y-auto max-h-80">
               <li
                 class="flex justify-between items-center px-2 py-2 rounded bg-[#fafafa]"
               >
