--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emergency Service</title>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
@@ -35,7 +36,7 @@
         <p
           class="flex items-center bg-[#ECFFF0] rounded-3xl px-3 py-1 sm:px-5 sm:py-1"
         >
-          <span>100</span>
+          <span class="coins">100</span>
           <img
             src="./assets/coin.png"
             class="w-6 h-6 sm:w-[30px] sm:h-[30px] ml-1"
@@ -591,7 +592,7 @@
             <div class="flex justify-between items-center border-b pb-2">
               <h2 class="font-semibold text-gray-700">Call History</h2>
               <button
-                class="text-sm bg-green-600 text-white px-4 py-2 rounded-3xl"
+                class="clear text-sm bg-green-600 text-white px-4 py-2 rounded-3xl"
               >
                 Clear
               </button>
